--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,13 @@ jobs:
         with:
            name: Dependency report
            path: ${{github.workspace}}/reports
-
+           
+  Docker_buid_push:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+        with:
+            fetch-depth: 0
       - name: Docker
         uses: docker/login-action@v3.0.0
         with:
