--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,7 +55,7 @@ jobs:
           dcoker build --tag iliberona/devsecops:latest .
 
       - name: Image Security
-        uses: aquasecurity/trivy-action@mastyer
+        uses: aquasecurity/trivy-action@master
         with:
           image-ref: 'iliberona/devsecops:latest'
           format: 'table'
