--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,7 +63,7 @@ jobs:
           
       - name: Build Docker
         run: |
-          dcoker push iliberona/devsecops 
+          docker push iliberona/devsecops 
 
       
       
