--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,11 @@
+run-name: Workflow Análisis 
+
 on:
   push:
     branches:
       - main
   pull_request:
-    types: [opened, synchronize, reopened]
-    
+    types: [opened, synchronize, reopened] 
 jobs:
   SAST:
     uses: ./.github/workflows/ci/template-SAST.yml
