--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   SAST:
-    uses: iranherr/devsecops/.github/workflows/ci/templateSast.yml@main
+    uses: /iranherr/devsecops/.github/workflows/ci/templateSast.yml@main
     with:
       run-name: "Análisis de Código"
     secrets: inherit 
