--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,6 @@
-run-name: Workflow
+
+name: Workflow
+
 on:
   push:
     branches:
@@ -8,7 +10,7 @@ on:
 
 jobs:
   SAST:
-    uses: /iranherr/devsecops/.github/workflows/ci/templateSast.yml@main
+    uses: iranherr/devsecops/.github/workflows/ci/templateSast.yml@main
     with:
       run-name: "Análisis de Código"
     secrets: inherit 
