--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -8,7 +8,7 @@ on:
     types: [opened, synchronize, reopened] 
 jobs:
   SAST:
-   uses: ./.github/workflows/SAST.yml
+   uses: ./.github/workflows/ci/template-SAST.yml
    with:
     run-name: "Análisis de Código"
    secrets: inherit
